feat: calculator buttons on screen
non styled
non functional

--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
 </head>
 
 <body>
-  <h1>Hello, World</h1>
+  <div class="calculator">
+    <div class="display"></div>
+    <div class="keypad">
+      <div class="numbers"></div>
+      <div class="utils"></div>
+    </div>
+  </div>
+
   <script src="script.js" defer></script>
 </body>
 
