feat: mock display and minimal styling

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <div class="calculator">
-    <div class="display"></div>
+    <div class="display">123</div>
     <div class="keypad">
       <div class="numbers"></div>
       <div class="utils"></div>
